Bug 478620 - Mouse navigation with numpad doesn't work under Wayland
Summary: Mouse navigation with numpad doesn't work under Wayland
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_accessibility (other bugs)
Version First Reported In: 5.90.0
Platform: Other Linux
: HI major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: accessibility, qt6, wayland-only
: 481843 490825 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-16 21:43 UTC by Jan Rathmann
Modified: 2025-04-22 14:52 UTC (History)
15 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Rathmann 2023-12-16 21:43:03 UTC
SUMMARY
Using the numpad to move the mouse cursor currently doesn't work in the Wayland session.

STEPS TO REPRODUCE
1. Start P6 Wayland session 
2. Go to Systemsettings -> Accessibility -> Mouse Navigation
3. Check "Use number pad to move cursor"
4. Try to move the cursor with the numpad

OBSERVED RESULT
Nothing happens when pressing numpad keys to move the cursor.

EXPECTED RESULT
Cursor should move when pressing numpad keys.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.90
KDE Frameworks Version: 5.247
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Reproduced with Neon Unstable installation and openSuse Krypton live image.
Comment 1 Nicolas Fella 2023-12-16 21:54:13 UTC
See https://invent.kde.org/plasma/kwin/-/merge_requests/3362
Comment 2 Nicolas Fella 2023-12-16 23:33:40 UTC Comment hidden (spam)
Comment 3 Nicolas Fella 2024-02-26 22:07:00 UTC
*** Bug 481843 has been marked as a duplicate of this bug. ***
Comment 4 Amir Khan 2024-02-27 11:15:33 UTC
Also confirmed on:

Fedora 39 KDE Spin VM (latest updates as of Tue 27 Feb 24), running as Virtualbox guest under Windows 11 host;
Fedora 39 KDE Spin VM, (latest updates as of Tue 27 Feb 24), running as Gnome Boxes guest under Ubuntu 22.04 host;
KDE Neon Developer VM, (updates crashing under Discover on Tue 27 Feb 24, but up-to-date prior to that) running as Gnome Boxes guest under Ubuntu 22.04 host.

The bug exists whether Plasma is in a Wayland session, or an X11 session, regardless of whether Num Lock is on or off, in either case.
Comment 5 Thiago Sueto 2024-07-25 17:43:04 UTC
*** Bug 490825 has been marked as a duplicate of this bug. ***
Comment 6 Nicolas Fella 2025-04-22 10:50:43 UTC
Git commit 7b93a7761e1d3fe1ca9af863c3921a7a3a276530 by Nicolas Fella.
Committed on 22/04/2025 at 10:33.
Pushed by nicolasfella into branch 'master'.

Implement MouseKeys on Wayland

This allows to move the mouse cursor using numpad keys.

This is an accessibility feature. On X11 this is implemented in XKB, on Wayland we get to do it outself.

It's implemented as a plugin that filters for relevant keys and generates mouse events through a virtual pointer device

M  +1    -0    autotests/integration/CMakeLists.txt
A  +222  -0    autotests/integration/mouse_keys_test.cpp     [License: GPL(v2.0+)]
M  +1    -0    src/input.h
M  +1    -0    src/plugins/CMakeLists.txt
A  +18   -0    src/plugins/mousekeys/CMakeLists.txt
A  +25   -0    src/plugins/mousekeys/main.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +5    -0    src/plugins/mousekeys/metadata.json
A  +249  -0    src/plugins/mousekeys/mousekeys.cpp     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]
A  +70   -0    src/plugins/mousekeys/mousekeys.h     [License: GPL(3+eV) GPL(v3.0) GPL(v2.0)]

https://invent.kde.org/plasma/kwin/-/commit/7b93a7761e1d3fe1ca9af863c3921a7a3a276530