Implement MouseKeys on Wayland

This allows to move the mouse cursor using numpad keys.

This is an accessibility feature. On X11 this is implemented in XKB, on Wayland we get to do it outself.

It's implemented as a plugin that filters for relevant keys and generates mouse events through a virtual pointer device

BUG: 478620